<resources>
    <string name="app_name">MySince</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="select">Select another starting day</string>
    <string name="save">Save</string>
    <string name="days">DAYS</string>
    <string name="change">change</string>
    <string name="del">DELETE</string>
    <string name="calendar">calendar</string>
    <string name="cancel">Cancel</string>
    <string name="test">30</string>
    <string name="test1">12,2015</string>
    <string name="back">Back</string>
    <string name="since_i">SINCE I ...</string>
    <string name="o">0</string>
    <string name="ri">日</string>
    <string name="yi">一</string>
    <string name="er">二</string>
    <string name="san">三</string>
    <string name="si">四</string>
    <string name="wu">五</string>
    <string name="liu">六</string>

</resources>
