<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/body"
    android:layout_height="fill_parent">
    <include layout="@layout/title2"/>
    <EditText
        android:layout_width="wrap_content"
        android:text="SINCE I ..."
        android:layout_marginTop="70dp"
        android:id="@+id/thing"
        android:maxLines="2"
        android:layout_marginBottom="30dp"
        android:textSize="30sp"
        android:background="@null"
        android:textColor="@android:color/background_light"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:text="0"
        android:layout_gravity="center"
        android:textSize="80sp"
        android:singleLine="true"
        android:ellipsize="middle"
        android:id="@+id/haomany"
        android:layout_marginBottom="30dp"
        android:textColor="@android:color/background_light"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/days"
        android:layout_gravity="center"
        android:id="@+id/day"
        android:textSize="30sp"
        android:textColor="@android:color/background_light"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_margin="10dp"
        android:layout_height="fill_parent">
        <Button
            android:layout_width="fill_parent"
            android:id="@+id/save"
            android:text="@string/save"
            android:background="@color/card"
            android:textColor="@android:color/background_dark"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:layout_alignParentBottom="true"
            android:layout_height="80dp" />
        <Button
            android:layout_width="fill_parent"
            android:layout_above="@+id/save"
            android:text="@string/select"
            android:id="@+id/select"
            android:background="@color/card"
            android:textColor="@android:color/background_dark"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>
